--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -3,6 +3,7 @@
 body{
     font-family: 'Microsoft JhengHei', "Poppins", sans-serif;
     padding-right: 0 !important;
+    background: #dee2e6;
 }
 .p-t-7, .control-label{
     padding-top: 7px;
@@ -265,39 +266,81 @@ body{
         }
     }
 }
-.table-box{
-    margin-bottom: 0;
-    &.dataTable{
-        margin-top: 0 !important;
-    }
-    thead{
-        tr{
-            th{
-                padding: 8px 5px;
-                white-space: nowrap;
-                background-color: #6c757d;
-                color: #fff;
-            }
-        }
-    }
-    tbody, tfoot{
-        > tr{
-            > td{
-                padding: 8px 5px;
-                a{
-                    cursor: pointer;
-                }
-                i{
-                    transform: scale(1.7);
-                    margin: 0 5px;
+.table{
+    &-box{
+        margin-bottom: 0;
+        thead{
+            tr{
+                th{
+                    padding: 8px 5px;
+                    white-space: nowrap;
+                    background-color: #6c757d;
+                    color: #fff;
                 }
             }
         }
+        tbody, tfoot{
+            > tr{
+                > td{
+                    padding: 8px 5px;
+                    a{
+                        cursor: pointer;
+                    }
+                    i{
+                        transform: scale(1.7);
+                        margin: 0 5px;
+                    }
+                }
+            }
+        }
+        tfoot{
+            tr{
+                td{
+                    background-color: #f5f5f5;
+                }
+            }
+        }
     }
-    tfoot{
-        tr{
-            td{
-                background-color: #f5f5f5;
+    &-sort{
+        thead{
+            tr{
+                th{
+                    position: relative;
+                    &.sorting{
+                        &::before, &::after{
+                            font-family: "dripicons-v2" !important;
+                            position: absolute;
+                            cursor: pointer;
+                            opacity: 0.4;
+                        }
+                        &::before{
+                                content:"\6e";
+                                right: 1.4em;
+                        }
+                        &::after{
+                                content:"\6b";
+                                right: 0.5em;
+                        }
+                        &.sort-desc{
+                            &::after{
+                                opacity: 1;
+                            }
+                        }
+                        &.sort-asc{
+                            &::before{
+                                opacity: 1;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+        tbody{
+            tr{
+                td{
+                    white-space: nowrap;
+                    min-width: 105px;
+                }
             }
         }
     }
@@ -433,29 +476,7 @@ body{
         }
     }
 }
-//serarch/order
-#table-sort{
-    th.sorting, th.sorting_asc, th.sorting_desc{
-        padding: 8px 0 !important;
-    }
-    th.width-40.sorting_asc{
-        width: 40px !important;
-        &::after, &::before{
-            display: none;
-        }
-    }    
-    th.width-40.sorting_disabled{
-        width: 29px !important
-    }
-    th.sorting, th.sorting_asc, .sorting_desc{
-        &::after, &::before{
-            top:8px;
-        }
-    }
-    td{
-        white-space: nowrap;
-    }
-}
+
 //finance/apply
 .delivery{
     &-amount{
