--- a/public/css/style.css
+++ b/public/css/style.css
@@ -29,7 +29,7 @@ body {
 }
 
 .text-green {
-  color: #58db83;
+  color: #3bb563;
 }
 
 .text-red {
@@ -554,6 +554,20 @@ body {
 
 .custom-control-label::before {
   top: 2px;
+}
+
+.report-table th {
+  width: 200px;
+  min-width: 200px;
+}
+
+.report-table th.width-40 {
+  width: 40px;
+  min-width: 40px;
+}
+
+.report-table th:nth-child(2) {
+  width: auto;
 }
 
 .report-table td div {
