--- a/public/gateway/alipay/front-old.css
+++ b/public/gateway/alipay/front-old.css
@@ -324,6 +324,22 @@ fieldset {
     padding: 10px 0 0
 }
 
+.text-center {
+    text-align: center;
+}
+.btn-open{
+  background-color: #00aaee;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  width: 182px;
+  border-radius: 6px;
+}
+
 .mi-form-item {
     padding: 0 0 20px 170px;
     margin: 0
@@ -3880,6 +3896,7 @@ html body .fn-mt20 {
     border: 1px solid #d3d3d3;
     -webkit-box-shadow: 1px 1px 1px #ccc;
     box-shadow: 1px 1px 1px #ccc;
+    margin-bottom: 10px;
 }
 
 .qrcode-img-area .qrcode-busy-icon {
