--- a/public/gateway/alipay/front-old.css
+++ b/public/gateway/alipay/front-old.css
@@ -3828,6 +3828,7 @@ html body .fn-mt20 {
 .qrcode-area {
     margin: 0 auto;
     position: relative;
+    padding-top: 45px;
 }
 
 .qrcode-integration .qrcode-header {
@@ -4796,7 +4797,7 @@ body {
     }
 
     .qrguide-area {
-        top: 30px;
+        top: -38px;
         left: 75%;
         width: 114px;
     }
